@@ -29,6 +29,7 @@ import java.io.ObjectOutputStream;
 import java.io.PrintStream;
 import java.io.RandomAccessFile;
 import java.io.Serializable;
+import java.net.InetAddress;
 import java.net.URL;
 import java.util.AbstractList;
 import java.util.ArrayList;
@@ -99,6 +100,7 @@ public class CacheServerLauncher  {
   protected final String startLogFileName;
   protected final String pidFileName;
   protected final String statusName;
+  protected final String hostName;
   protected Status status = null;
   protected File workingDir = null;
   protected PrintStream oldOut = System.out;
@@ -107,8 +109,8 @@ public class CacheServerLauncher  {
   protected String maxHeapSize;
   protected String initialHeapSize;
   protected String offHeapSize;
-  protected String maxPermGenSize;
-  protected boolean useThriftServerDefault;
+  protected boolean useThriftServerDefault =
+      ClientSharedUtils.isThriftDefault();
 
   protected static CacheServerLauncher instance;
 
@@ -129,6 +131,22 @@ public class CacheServerLauncher  {
     this.defaultLogFileName = baseNameLowerCase + ".log";
     this.pidFileName = baseNameLowerCase + ".pid";
     this.statusName = "." + baseNameLowerCase + ".ser";
+
+    InetAddress host;
+    try {
+      host = SocketCreator.getLocalHost();
+    } catch (Exception ex) {
+      try {
+        host = InetAddress.getLocalHost();
+      } catch (Exception e) {
+        host = null;
+      }
+    }
+    if (host != null) {
+      this.hostName = host.getCanonicalHostName();
+    } else {
+      this.hostName = "localhost";
+    }
   }
 
   protected String getBaseName(final String name) {
@@ -187,7 +205,13 @@ public class CacheServerLauncher  {
    */
   protected void status(final String[] args) throws Exception {
     workingDir = (File) getStopOptions(args).get(DIR);
-    System.out.println(getStatus());
+    Status s = getStatus();
+    if (args.length >= 1 && args[1].equalsIgnoreCase("verbose")) {
+      System.out.println(s);
+    }
+    else {
+      System.out.println(s.shortStatus());
+    }
     if (DONT_EXIT_AFTER_LAUNCH) {
       return;
     }
@@ -217,7 +241,7 @@ public class CacheServerLauncher  {
     }
     else {
       System.out.println(LocalizedStrings.CacheServerLauncher_0_STOPPED
-          .toLocalizedString(this.baseName));
+          .toLocalizedString(this.baseName, this.hostName));
     }
     System.exit(0);
   }
@@ -335,14 +359,11 @@ public class CacheServerLauncher  {
   public static final String EVICTION_HEAP_PERCENTAGE =
       "eviction-heap-percentage";
   public static final String CRITICAL_OFF_HEAP_PERCENTAGE =
-      "critical-off-heap-percentage";
+        "critical-off-heap-percentage";
   public static final String EVICTION_OFF_HEAP_PERCENTAGE =
       "eviction-off-heap-percentage";
   protected static final String LOCK_MEMORY = "lock-memory";
 
-  protected static final String MAX_PERM_SIZE = "-XX:MaxPermSize";
-  protected static final String MAX_PERM_DEFAULT = "=128m";
-  
   protected final File processDirOption(final Map<String, Object> options, final String dirValue) throws FileNotFoundException {
     final File inputWorkingDirectory = new File(dirValue);
 
@@ -422,8 +443,6 @@ public class CacheServerLauncher  {
           this.maxHeapSize = vmArg.substring(4);
         } else if (vmArg.startsWith("-Xms")) {
           this.initialHeapSize = vmArg.substring(4);
-        } else if (vmArg.startsWith(MAX_PERM_SIZE)) {
-          this.maxPermGenSize = vmArg;
         } else if (vmArg.startsWith(thriftArg = ("-D"
             + SystemProperties.getServerInstance().getSystemPropertyNamePrefix()
             + ClientSharedUtils.USE_THRIFT_AS_DEFAULT_PROP))) {
@@ -601,7 +620,8 @@ public class CacheServerLauncher  {
     options.put(DIR, new File("."));
 
     for (final String arg : args) {
-      if (arg.equals("stop") || arg.equals("status") || arg.equals("wait")) {
+      if (arg.equals("stop") || arg.equals("status") || arg.equals("wait")
+              || arg.equals("verbose")) {
         // expected
       }
       else if (arg.startsWith("-dir=")) {
@@ -727,7 +747,7 @@ public class CacheServerLauncher  {
   /**
    * Sets the status of the cache server to be {@link #RUNNING}.
    */
-  public void running(final InternalDistributedSystem system) {
+  public void running(final InternalDistributedSystem system, boolean endWaiting) {
     Status stat = this.status;
     if (stat == null) {
       stat = this.status = createStatus(this.baseName, RUNNING, getProcessId());
@@ -735,6 +755,9 @@ public class CacheServerLauncher  {
     else {
       if (stat.state == WAITING) {
         stat.dsMsg = null;
+        if (endWaiting) {
+          stat.state = RUNNING;
+        }
       } else {
         stat.state = RUNNING;
       }
@@ -889,7 +912,7 @@ public class CacheServerLauncher  {
 
     startAdditionalServices(cache, options, props);
 
-    this.running(system);
+    this.running(system, false);
 
     clearLogListener();
 
@@ -1190,18 +1213,19 @@ public class CacheServerLauncher  {
 
       // after polling, determine the status of the Cache Server one last time and determine how to exit...
       if (this.status.state == SHUTDOWN) {
-        System.out.println(LocalizedStrings.CacheServerLauncher_0_STOPPED.toLocalizedString(this.baseName));
+        System.out.println(LocalizedStrings.CacheServerLauncher_0_STOPPED
+            .toLocalizedString(this.baseName, this.hostName));
         deleteStatus();
         exitStatus = 0;
       }
       else {
         System.out.println(LocalizedStrings.CacheServerLauncher_TIMEOUT_WAITING_FOR_0_TO_SHUTDOWN_STATUS_IS_1
-          .toLocalizedString(this.baseName, this.status));
+          .toLocalizedString(this.baseName, this.hostName, this.status));
       }
     }
     else {
       System.out.println(LocalizedStrings.CacheServerLauncher_THE_SPECIFIED_WORKING_DIRECTORY_0_CONTAINS_NO_STATUS_FILE
-        .toLocalizedString(this.workingDir));
+        .toLocalizedString(this.workingDir, this.hostName));
     }
 
     if (DONT_EXIT_AFTER_LAUNCH) {
@@ -1264,6 +1288,15 @@ public class CacheServerLauncher  {
     @Override
     public String toString() {
       final StringBuilder buffer = new StringBuilder();
+      buffer.append(shortStatus());
+      if (this.dsMsg != null) {
+        buffer.append('\n').append(this.dsMsg);
+      }
+      return buffer.toString();
+    }
+
+    public String shortStatus() {
+      final StringBuilder buffer = new StringBuilder();
       buffer.append(this.baseName).append(" pid: ").append(pid).append(" status: ");
       switch (state) {
         case SHUTDOWN:
@@ -1299,9 +1332,6 @@ public class CacheServerLauncher  {
           buffer.append(" - ").append(LocalizedStrings
               .CacheServerLauncher_SEE_LOG_FILE_FOR_DETAILS.toLocalizedString());
         }
-      }
-      if (this.dsMsg != null) {
-        buffer.append('\n').append(this.dsMsg);
       }
       return buffer.toString();
     }
@@ -1516,7 +1546,7 @@ public class CacheServerLauncher  {
           }
       }
       writePidToFile(status);
-      System.out.println( status );
+      System.out.println(status);
     }
   }
 
